--- a/Datasets-Codici.html
+++ b/Datasets-Codici.html
@@ -184,7 +184,7 @@ pre code {
 <li><a href="#airquality"><code>airquality</code></a></li>
 <li><a href="#pressure"><code>pressure</code></a></li>
 <li><a href="#quakes"><code>quakes</code></a></li>
-<li><a href="#rock">`rock``</a></li>
+<li><a href="#rock"><code>rock</code></a></li>
 </ul></li>
 </ul>
 </div>
@@ -428,7 +428,7 @@ m = lm(y ~ x, data = data)
 summary(m)</code></pre>
 </div>
 <div id="rock" class="section level2">
-<h2>`rock``</h2>
+<h2><code>rock</code></h2>
 <p>Misure di diverse rocce</p>
 <p>⚠️ La variabile <code>x</code> è numerica (ma niente panico)</p>
 <p>La variabile dipedente è <code>stations</code>, il predittore è la variabile <code>lat</code></p>
