Baby steps update

--- a/slides/01 - Baby Steps/01-Baby-Steps.html
+++ b/slides/01 - Baby Steps/01-Baby-Steps.html
@@ -3704,7 +3704,7 @@ Dopo il corso <code>RMarkdown</code>
 
 <p>😄 Si &ldquo;autoaggiusta&rdquo; al file <font size="2">(non sempre in modo ottimale)</font></p>
 
-<p>😭 Per cambiare qualcosa bisogna ricorrere a HTML</p>
+<p>😞 Per cambiare qualcosa bisogna ricorrere a HTML</p>
 
 <div align="center">
 <h4>
@@ -3717,7 +3717,7 @@ Dopo il corso <code>RMarkdown</code>
 
 <p>😄 Permette di cambiare comodamente posizionamento e dimensioni dell’immagine</p>
 
-<p>😭 Richiede un po’ di scrittura in più</p>
+<p>🥹 Richiede un po’ di scrittura in più</p>
 
 </article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Le sottocartelle</h2></hgroup><article  id="le-sottocartelle">
 
@@ -3761,7 +3761,7 @@ knitr::include_graphics(path = &quot;vignettes/immagine.png&quot;)
 
 <ul>
 <li>Nel vostro progetto, create la cartella <code>img</code> e la cartella <code>bibliografia</code></li>
-<li>Scegliete due immagini da Google immagini <font size="2">(magari inerenti il vostro dataset 🐔, 🌺, 🚗)</font> e salvatele nelle cartella <code>img</code></li>
+<li>Scegliete due immagini da Google immagini <font size="2">(magari inerenti il vostro dataset 🐔, 🌹, 🚗)</font> e salvatele nelle cartella <code>img</code></li>
 <li>Importare le immagini, una con il codice <code>Markdown</code>, una con il codice <code>RMarkdown</code></li>
 </ul>
 
