--- a/slides/00 - Introduzione/00-Introduzione.html
+++ b/slides/00 - Introduzione/00-Introduzione.html
@@ -3348,7 +3348,7 @@ ggplot(iris,
 
 <ul>
 <li><p>Baby steps: Comandi basici di <code>RMarkdown</code></p></li>
-<li><p>Chunck di codice: Dalle immagini ai grafici passando per i codici</p></li>
+<li><p>Chunk di codice: Dalle immagini ai grafici passando per i codici</p></li>
 <li><p>Creazione di un documento PDF con bibliografia</p></li>
 <li><p>Creazione di una presentazione in HTML</p></li>
 <li><p>LaTeX e <code>RMarkdown</code> insieme</p></li>
@@ -3368,7 +3368,7 @@ ggplot(iris,
 <li>Una presentazione in HTML con almeno 3 slide e:
 
 <ul>
-<li>Colonne, tabella, testo progressivo, un chunck di codice, una tabella con i risultati del modello e un plot</li>
+<li>Colonne, tabella, testo progressivo, un chunk di codice, una tabella con i risultati del modello e un plot</li>
 </ul></li>
 </ul>
 
