baby steps update

--- a/slides/02 - Chunk di codice/02-Chunk-di-Codice.html
+++ b/slides/02 - Chunk di codice/02-Chunk-di-Codice.html
@@ -3369,7 +3369,7 @@ library(ggplot2)
 
 <ul>
 <li><p>Molti pacchetti di <code>R</code> mostrano dei messaggi quando vengono caricati o quando viene usata qualche funzione. Per toglierli: <code>message=FALSE</code></p></li>
-<li><p>Per togliere i warning (ad esempio quando usiamo <code>lme4</code> e fittiamo modelli molto complessi): <code>message=FALSE</code></p></li>
+<li><p>Per togliere i warning (ad esempio quando usiamo <code>lme4</code> e fittiamo modelli molto complessi): <code>warning=FALSE</code></p></li>
 <li><p>Per togliere i messaggi di errore (e.g., viene chiamato un oggetto che non esiste): <code>error=FALSE</code></p></li>
 </ul>
 
@@ -3581,7 +3581,7 @@ rock
 <p>😄 rapido, efficace, colpo d’occhio</p></div>
 
 <div>
-<p>😿 Nella tesi non sta molto bene</p></div>
+<p>😢 Nella tesi non sta molto bene</p></div>
 
 </article></slide><slide class=""><hgroup><h2><code>stargazer</code> ❤️</h2></hgroup><article  id="stargazer">
 
@@ -3593,9 +3593,9 @@ rock
 
 <p>😄 Perfetto per model comparison</p>
 
-<p>😢 Non va bene per riportare le tabelle di summary preparate da noi.</p>
+<p>😭 Non va bene per riportare le tabelle di summary preparate da noi.</p>
 
-<p>🥹 è ottimmizzato per LaTex (ossia per produrre i PDF).</p>
+<p>😢 è ottimmizzato per LaTex (ossia per produrre i PDF).</p>
 
 <div align="center">
 <p>FONDAMENTALE:</p></div>
