--- a/slides/02 - Chunk di codice/02-Chunk-di-Codice.html
+++ b/slides/02 - Chunk di codice/02-Chunk-di-Codice.html
@@ -3502,7 +3502,7 @@ rock
   3   7558 3930.660 0.1833120    6.3
 ....</pre>
 
-<p>Ricodadate che una delle righe che volete mostrate è &ldquo;mangiata&rdquo; dai nomi delle colonne</p>
+<p>Ricodate che una delle righe che volete mostrate è &ldquo;mangiata&rdquo; dai nomi delle colonne</p>
 
 </article></slide><slide class=""><hgroup><h2>Your turn!</h2></hgroup><article  id="your-turn-1">
 
@@ -3593,7 +3593,7 @@ rock
 
 <p>😄 Perfetto per model comparison</p>
 
-<p>😭 Non va bene per riportare le tabelle di summary preparate da noi.</p>
+<p>😿 Non va bene per riportare le tabelle di summary preparate da noi.</p>
 
 <p>😢 è ottimmizzato per LaTex (ossia per produrre i PDF).</p>
 
