--- a/slides/02 - Chunk di codice/02-Chunk-di-Codice.html
+++ b/slides/02 - Chunk di codice/02-Chunk-di-Codice.html
@@ -3581,7 +3581,7 @@ rock
 <p>😄 rapido, efficace, colpo d’occhio</p></div>
 
 <div>
-<p>😢 Nella tesi non sta molto bene</p></div>
+<p>😞 Nella tesi non sta molto bene</p></div>
 
 </article></slide><slide class=""><hgroup><h2><code>stargazer</code> ❤️</h2></hgroup><article  id="stargazer">
 
@@ -3593,9 +3593,9 @@ rock
 
 <p>😄 Perfetto per model comparison</p>
 
-<p>😿 Non va bene per riportare le tabelle di summary preparate da noi.</p>
+<p>😢 Non va bene per riportare le tabelle di summary preparate da noi.</p>
 
-<p>😢 è ottimmizzato per LaTex (ossia per produrre i PDF).</p>
+<p>😞 è ottimmizzato per LaTex (ossia per produrre i PDF).</p>
 
 <div align="center">
 <p>FONDAMENTALE:</p></div>
@@ -4286,7 +4286,7 @@ F Statistic
 <p>\[z =   \frac{x_i - \bar{X}}{sd}\]</p>
 
 <ul>
-<li>Starndizzate il primo valore della \(y\) del vostro dataset e riportate il risultato nell’equazione</li>
+<li>Standardizzate il primo valore della \(y\) del vostro dataset e riportate il risultato nell’equazione</li>
 </ul></article></slide>
 
 
